fixed rotation alignment and added spin class

--- a/index.css
+++ b/index.css
@@ -17,13 +17,17 @@
 
 /* === ICON === */
 
-.v2-icon:before {
+.v2-icon {
     display: inline-block;
     font: normal normal normal 14px/1 'nibdings';
     font-size: inherit;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    vertical-align: middle;
+}
+
+.v2-icon:before {
 }
 
 /* === ICON: SIZE === */
@@ -74,229 +78,244 @@
 
 /* === ICON: ROTATION === */
 
-.v2-icon--rotate-90:before {
+.v2-icon--rotate-90 {
     transform: rotate(90deg)
 }
 
-.v2-icon--rotate-180:before {
+.v2-icon--rotate-180 {
     transform: rotate(180deg)
 }
 
-.v2-icon--rotate-270:before {
+.v2-icon--rotate-270 {
     transform: rotate(270deg)
+}
+
+/* === ICON: SPIN === */
+
+@keyframes v2-icon-spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(359deg);
+    }
+}
+
+.v2-icon--spin {
+    animation: v2-icon-spin 2s infinite linear;
 }
 
 /* === ICON: GLYPH === */
 
 
-.v2-icon--ambulance:before {
+.v2-icon--calendar:before {
     content: "\E001"
 }
 
-.v2-icon--clock:before {
+.v2-icon--close-circle-inverse:before {
     content: "\E002"
 }
 
-.v2-icon--dollar-circle-inverse:before {
+.v2-icon--close-circle:before {
     content: "\E003"
 }
 
-.v2-icon--dollar-circle:before {
+.v2-icon--close:before {
     content: "\E004"
 }
 
-.v2-icon--dollar:before {
+.v2-icon--edit:before {
     content: "\E005"
 }
 
-.v2-icon--flag:before {
+.v2-icon--envelope:before {
     content: "\E006"
 }
 
-.v2-icon--heartrate:before {
+.v2-icon--help-circle-inverse:before {
     content: "\E007"
 }
 
-.v2-icon--hospital:before {
+.v2-icon--help-circle:before {
     content: "\E008"
 }
 
-.v2-icon--megaphone:before {
+.v2-icon--help:before {
     content: "\E009"
 }
 
-.v2-icon--paper-clip:before {
+.v2-icon--info-circle-inverse:before {
     content: "\E00A"
 }
 
-.v2-icon--settings:before {
+.v2-icon--info-circle:before {
     content: "\E00B"
 }
 
-.v2-icon--stopwatch:before {
+.v2-icon--location:before {
     content: "\E00C"
 }
 
-.v2-icon--switching:before {
+.v2-icon--lock-circle-inverse:before {
     content: "\E00D"
 }
 
-.v2-icon--thumbs-up:before {
+.v2-icon--lock:before {
     content: "\E00E"
 }
 
-.v2-icon--tools:before {
+.v2-icon--menu:before {
     content: "\E00F"
 }
 
-.v2-icon--umbrella:before {
+.v2-icon--pdf-inverse:before {
     content: "\E010"
 }
 
-.v2-icon--arrow:before {
+.v2-icon--pdf:before {
     content: "\E011"
 }
 
-.v2-icon--chevron-circle-inverse:before {
+.v2-icon--phone:before {
     content: "\E012"
 }
 
-.v2-icon--chevron-circle:before {
+.v2-icon--plus-circle-inverse:before {
     content: "\E013"
 }
 
-.v2-icon--chevron:before {
+.v2-icon--plus-circle:before {
     content: "\E014"
 }
 
-.v2-icon--beard:before {
+.v2-icon--plus:before {
     content: "\E015"
 }
 
-.v2-icon--fire:before {
+.v2-icon--shopping-cart:before {
     content: "\E016"
 }
 
-.v2-icon--giraffe:before {
+.v2-icon--smartphone:before {
     content: "\E017"
 }
 
-.v2-icon--glasses:before {
+.v2-icon--tick-circle-inverse:before {
     content: "\E018"
 }
 
-.v2-icon--lightning:before {
+.v2-icon--tick-circle:before {
     content: "\E019"
 }
 
-.v2-icon--calendar:before {
+.v2-icon--tick:before {
     content: "\E01A"
 }
 
-.v2-icon--close-circle-inverse:before {
+.v2-icon--warning-inverse:before {
     content: "\E01B"
 }
 
-.v2-icon--close-circle:before {
+.v2-icon--warning:before {
     content: "\E01C"
 }
 
-.v2-icon--close:before {
+.v2-icon--arrow:before {
     content: "\E01D"
 }
 
-.v2-icon--edit:before {
+.v2-icon--chevron-circle-inverse:before {
     content: "\E01E"
 }
 
-.v2-icon--envelope:before {
+.v2-icon--chevron-circle:before {
     content: "\E01F"
 }
 
-.v2-icon--help-circle-inverse:before {
+.v2-icon--chevron:before {
     content: "\E020"
 }
 
-.v2-icon--help-circle:before {
+.v2-icon--beard:before {
     content: "\E021"
 }
 
-.v2-icon--help:before {
+.v2-icon--fire:before {
     content: "\E022"
 }
 
-.v2-icon--info-circle-inverse:before {
+.v2-icon--giraffe:before {
     content: "\E023"
 }
 
-.v2-icon--info-circle:before {
+.v2-icon--glasses:before {
     content: "\E024"
 }
 
-.v2-icon--location:before {
+.v2-icon--lightning:before {
     content: "\E025"
 }
 
-.v2-icon--lock-circle-inverse:before {
+.v2-icon--ambulance:before {
     content: "\E026"
 }
 
-.v2-icon--lock:before {
+.v2-icon--clock:before {
     content: "\E027"
 }
 
-.v2-icon--menu:before {
+.v2-icon--dollar-circle-inverse:before {
     content: "\E028"
 }
 
-.v2-icon--pdf-inverse:before {
+.v2-icon--dollar-circle:before {
     content: "\E029"
 }
 
-.v2-icon--pdf:before {
+.v2-icon--dollar:before {
     content: "\E02A"
 }
 
-.v2-icon--phone:before {
+.v2-icon--flag:before {
     content: "\E02B"
 }
 
-.v2-icon--plus-circle-inverse:before {
+.v2-icon--heartrate:before {
     content: "\E02C"
 }
 
-.v2-icon--plus-circle:before {
+.v2-icon--hospital:before {
     content: "\E02D"
 }
 
-.v2-icon--plus:before {
+.v2-icon--megaphone:before {
     content: "\E02E"
 }
 
-.v2-icon--shopping-cart:before {
+.v2-icon--paper-clip:before {
     content: "\E02F"
 }
 
-.v2-icon--smartphone:before {
+.v2-icon--settings:before {
     content: "\E030"
 }
 
-.v2-icon--tick-circle-inverse:before {
+.v2-icon--stopwatch:before {
     content: "\E031"
 }
 
-.v2-icon--tick-circle:before {
+.v2-icon--switching:before {
     content: "\E032"
 }
 
-.v2-icon--tick:before {
+.v2-icon--thumbs-up:before {
     content: "\E033"
 }
 
-.v2-icon--warning-inverse:before {
+.v2-icon--tools:before {
     content: "\E034"
 }
 
-.v2-icon--warning:before {
+.v2-icon--umbrella:before {
     content: "\E035"
 }
